<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.UsersFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_users"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/teal"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_user"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/teal"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:contentDescription="@string/app_name"
                android:scaleType="centerInside"
                android:src="@drawable/logo_header"
                app:tint="@color/white" />
        </androidx.appcompat.widget.Toolbar>

        <SearchView
            android:id="@+id/searchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_6sdp"
            android:background="@drawable/bg_searchview"
            android:iconifiedByDefault="false"
            android:queryBackground="@android:color/transparent"
            android:queryHint="@string/search_hint"
            android:theme="@style/Theme.Cubihub.Searchview" />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar_users"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/img_messages"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/null_data_message"
            android:src="@drawable/add_data" />

        <TextView
            android:id="@+id/tv_messages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/null_data_message"
            android:layout_marginTop="@dimen/_10sdp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp" />
    </LinearLayout>

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmer_loading"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar_users"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <include layout="@layout/shimmer_user_placeholder"/>
            <include layout="@layout/shimmer_user_placeholder"/>
            <include layout="@layout/shimmer_user_placeholder"/>
            <include layout="@layout/shimmer_user_placeholder"/>
            <include layout="@layout/shimmer_user_placeholder"/>
            <include layout="@layout/shimmer_user_placeholder"/>
            <include layout="@layout/shimmer_user_placeholder"/>
            <include layout="@layout/shimmer_user_placeholder"/>
        </LinearLayout>

    </com.facebook.shimmer.ShimmerFrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_users"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar_users"
        tools:listitem="@layout/item_user"
        tools:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>